--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--title-->
    
     <div class="container">
-      <div class="header title">
+      <div class="header-title">
         <h1 class="text-muted">Spiderman Trivia Game</h1>
       </div>
       
@@ -40,7 +40,7 @@
 
       <div class="row">
         <div id="choices" class="text-center">
-          <button id="start" class="btn btn-info btn-lg">Done</button>
+          <button id="done" class="btn btn-danger btn-lg">Done</button>
           <div id="options">
             
           </div>
