--- a/index.html
+++ b/index.html
@@ -84,12 +84,12 @@
           <span class="text-center">
             <p>&copy; Copyright 2020 Jadan Morrow</p>
             <p id="copyright-small" class="text-muted">
-              Images featuring <i>Spider-Man</i> are the property of MARVEL.
+              Images featuring <i>Spider-Man</i> are the property of MARVEL
             </p></span>
       </footer>
 
       <!--Script-->
-      
+
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="javascript/main.js"></script>
 
