--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
           <span class="text-center">
             <p>&copy; Copyright 2020 Jadan Morrow</p>
             <p id="copyright-small" class="text-muted">
-              Images featuring <i>Spider-Man</i> are the property of MARVEL
+              Images featuring <i>Spider-Man</i> are the property of MARVEL.
             </p></span>
       </footer>
 
