--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Trivia Game</title>
 
@@ -10,22 +9,19 @@
 
     <link
       rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <link rel="script" href="javascript/main.js" />
   </head>
 
-  <!--Spidey Logo-->
+   <!--Spidey Logo-->
 
   <body>
-      <div class="headerImage">
+    <div class="headerImage">
     <img src="https://cdn.freebiesupply.com/logos/large/2x/spider-man-logo-png-transparent.png" width="400" height="400">
-   </div>
-    <div class="container">
-      <div class="header-title">
-      </div>
-    
+    </div>
+   <div class="container">
+    <div class="header-title">
 
       <!--jumbotron-->
 
@@ -60,11 +56,12 @@
                 </div>
 
                 <div>
-                  <div id="questions-box"></div>
+                  <div id="questions-box">
+                  </div>
                 </div>
 
                 <div class="hidden" id="end-page">
-                  <h2>Here are your scores:</h2>
+                  <h2></h2>
                   <p id="correct-answers"></p>
                   <p id="incorrect-answers"></p>
                   <p id="unanswered"></p>
@@ -72,27 +69,11 @@
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
-
-    <!--Footer-->
-    
-      <footer>
-        <div class="container-fluid">
-          <hr />
-          <span class="text-center">
-            <p>&copy; Copyright 2020 Jadan Morrow</p>
-            <p id="copyright-small" class="text-muted">
-              Images featuring <i>Spider-Man</i> are the property of MARVEL.
-            </p></span>
-      </footer>
 
       <!--Script-->
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script type="text/javascript" src="javascript/main.js"></script>
+      <script type="text/javascript" src="javascript/main.js"></script>
 
-    </div>
   </body>
 </html>
